fixxed z-index

--- a/public/assets/css/_table-mb.scss
+++ b/public/assets/css/_table-mb.scss
@@ -566,7 +566,7 @@
         position: -webkit-sticky;
         position: sticky;
         left: 0;
-        z-index: 2;
+        z-index: 0;
         background-color: #f5f5f5;
         @media (max-width: 380px) {
         width: 160px;
