--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -5621,7 +5621,7 @@ td:first-child {
   position: -webkit-sticky;
   position: sticky;
   left: 0;
-  z-index: 2;
+  z-index: 0;
   background-color: #f5f5f5;
 }
 
